--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "elm-live src/Main.elm --path-to-elm node_modules/.bin/elm --open -- --debug",
-    "build": "elm make src/Main.elm --debug --output=js/elm.js",
+    "start": "elm-live src/Main.elm --path-to-elm node_modules/.bin/elm --open -- --debug --output=js/elm.js",
+    "build": "elm make src/Main.elm --output=js/elm.js",
     "format": "elm-format . --yes",
     "test": "elm-format --validate . && elm-test"
   },
