--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "elm-mbta-api"]
 	path = elm-mbta-api
-	url = git@github.com:skyqrose/elm-mbta-api.git
+	url = https://github.com/skyqrose/elm-mbta-api.git
