--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "elm": "^0.19.0-no-deps",
-    "elm-format": "^0.8.1",
-    "elm-live": "^3.4.0",
-    "elm-test": "^0.19.0-rev6"
+    "elm": "^0.19.1-2",
+    "elm-format": "^0.8.2",
+    "elm-live": "^4.0.1",
+    "elm-test": "^0.19.1"
   }
 }
